force-app/main/default/objects/CIHI__c/fields/Primary_Employment_is_Multiple_Site_Emp__c.field-meta.xml
<CustomField>
    <fullName>Primary_Employment_is_Multiple_Site_Emp__c</fullName>
    <label>Primary Employer Multiple Site Employer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employment_is_Multiple_Site_Employe</valueSetName>
    </valueSet>
</CustomField>