force-app/main/default/objects/CIHI__c/fields/Primary_Place_of_Employment_3__c.field-meta.xml
<CustomField>
    <fullName>Primary_Place_of_Employment_3__c</fullName>
    <label>Primary Place of Employment 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Place_of_Employment</valueSetName>
    </valueSet>
</CustomField>