force-app/main/default/objects/CIHI__c/fields/Primary_Practice_Indicator_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Practice_Indicator_Postal_Code__c</fullName>
    <formula>IF(  ISBLANK(Postal_Code_of_Primary_Employment__c),&apos;Not applicable&apos;,if(Primary_Employer_Name__r.BillingPostalCode=Postal_Code_of_Primary_Employment__c,&apos;Yes&apos;,&apos;No&apos;))</formula>
    <label>Primary Practice Indicator Postal Code</label>
    <type>Text</type>
</CustomField>