force-app/main/default/objects/CIHI__c/fields/Provider_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Registration_Number__c</fullName>
    <formula>IF(LEN(Registration__r.Name)&lt;16,LPAD(Registration__r.Name,16,&apos; &apos;),Registration__r.Name)</formula>
    <label>Provider Registration Number</label>
    <type>Text</type>
</CustomField>