force-app/main/default/objects/CIHI__c/fields/Province_of_Grad_for_Highest_Level_Edu__c.field-meta.xml
<CustomField>
    <fullName>Province_of_Grad_for_Highest_Level_Edu__c</fullName>
    <label>Highest Level of Education Grad.Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Province_State_Value_Set</valueSetName>
    </valueSet>
</CustomField>