force-app/main/default/objects/CIHI__c/fields/Province_of_Graduation_for_Basic_Edu__c.field-meta.xml
<CustomField>
    <fullName>Province_of_Graduation_for_Basic_Edu__c</fullName>
    <label>Basic Pharmacy Education Graduation Prov</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Province_State_Value_Set</valueSetName>
    </valueSet>
</CustomField>