force-app/main/default/objects/CIHI__c/fields/Province_Territory_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Province_Territory_of_Residence__c</fullName>
    <label>Province/Territory of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Province_State_Value_Set</valueSetName>
    </valueSet>
</CustomField>