force-app/main/default/objects/CIHI__c/fields/Racialized_Group_3__c.field-meta.xml
<CustomField>
    <fullName>Racialized_Group_3__c</fullName>
    <label>Racialized Group 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Racialized_Group</valueSetName>
    </valueSet>
</CustomField>