force-app/main/default/objects/CIHI__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registrant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIHI (Registrant)</relationshipLabel>
    <relationshipName>CIHI_Report</relationshipName>
    <type>Lookup</type>
</CustomField>