force-app/main/default/objects/CIHI__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <formula>IF(ISPICKVAL(Registration__r.Registration_Status__c, &apos;Active&apos;),
IF( ISPICKVAL( Registration__r.Class__c , &apos;Practicing Direct&apos;),&apos;Active, full&apos;,&apos;Active, other&apos;),
TEXT(Registration__r.Registration_Status__c))</formula>
    <label>Registration Status</label>
    <type>Text</type>
</CustomField>