force-app/main/default/objects/CIHI__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Pharmacy Student</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Pharmacy Technician</fullName>
            </value>
            <value>
                <fullName>Pharmacy Technician Candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>