force-app/main/default/objects/CIHI__c/fields/Secondary_Employer_by_Staffing_Agency__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Employer_by_Staffing_Agency__c</fullName>
    <label>Secondary Employer by Staffing Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employer_by_Staffing_Agency</valueSetName>
    </valueSet>
</CustomField>