force-app/main/default/objects/CIHI__c/fields/Secondary_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Employer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Employer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIHI (Secondary Employer Name)</relationshipLabel>
    <relationshipName>Secondary_Employer</relationshipName>
    <type>Lookup</type>
</CustomField>