force-app/main/default/objects/CIHI__c/fields/Secondary_Employer_Organization_Identifi__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Employer_Organization_Identifi__c</fullName>
    <label>Secondary Employer Organization Identifi</label>
    <length>10</length>
    <type>Text</type>
</CustomField>