force-app/main/default/objects/CIHI__c/fields/Secondary_Employment_Annual_Earned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Employment_Annual_Earned_Hours__c</fullName>
    <label>Secondary Employment Annual Earned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>