force-app/main/default/objects/CIHI__c/fields/Secondary_Employment_Area_of_Practice_2__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Employment_Area_of_Practice_2__c</fullName>
    <label>Secondary Employment Area of Practice 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employment_Area_of_Practice</valueSetName>
    </valueSet>
</CustomField>