force-app/main/default/objects/CIHI__c/fields/Secondary_Employment_is_Multiple_Site__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Employment_is_Multiple_Site__c</fullName>
    <label>Second Employer Multiple Site Employer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employment_is_Multiple_Site_Employe</valueSetName>
    </valueSet>
</CustomField>