force-app/main/default/objects/CIHI__c/fields/Secondary_Patient_Interaction_Type_One__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Patient_Interaction_Type_One__c</fullName>
    <label>Secondary Employer Patient Interaction 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employer_Patient_Interaction_Type_1</valueSetName>
    </valueSet>
</CustomField>