force-app/main/default/objects/CIHI__c/fields/Secondary_Place_of_Employment_3__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Place_of_Employment_3__c</fullName>
    <label>Secondary Place of Employment 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Place_of_Employment</valueSetName>
    </valueSet>
</CustomField>