force-app/main/default/objects/CIHI__c/fields/Secondary_Position_2__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Position_2__c</fullName>
    <label>Secondary Position 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Position_Set</valueSetName>
    </valueSet>
</CustomField>