force-app/main/default/objects/CIHI__c/fields/Seeking_Employment__c.field-meta.xml
<CustomField>
    <fullName>Seeking_Employment__c</fullName>
    <label>Seeking Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In profession</fullName>
            </value>
            <value>
                <fullName>Not in profession</fullName>
            </value>
            <value>
                <fullName>Not seeking employment</fullName>
            </value>
            <value>
                <fullName>Not collected</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>