force-app/main/default/objects/CIHI__c/fields/Site_of_Practice_Indicator_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_of_Practice_Indicator_Postal_Code__c</fullName>
    <label>Site of Practice Indicator Postal Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>