force-app/main/default/objects/CIHI__c/fields/Spoken_Language_One__c.field-meta.xml
<CustomField>
    <fullName>Spoken_Language_One__c</fullName>
    <label>Spoken Language One</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Language_Set</valueSetName>
    </valueSet>
</CustomField>