force-app/main/default/objects/CIHI__c/fields/Tertiary_Employer_Organization_Identifie__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Employer_Organization_Identifie__c</fullName>
    <label>Tertiary Employer Organization Identifie</label>
    <length>10</length>
    <type>Text</type>
</CustomField>