force-app/main/default/objects/CIHI__c/fields/Tertiary_Practice_Indicator_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Practice_Indicator_Postal_Code__c</fullName>
    <formula>IF(  ISBLANK( Postal_Code_of_Third_Employment__c ),&apos;Not applicable&apos;,if( Third_Employer_Name__r.BillingPostalCode =Postal_Code_of_Third_Employment__c,&apos;Yes&apos;,&apos;No&apos;))</formula>
    <label>Tertiary Practice Indicator Postal Code</label>
    <type>Text</type>
</CustomField>