force-app/main/default/objects/CIHI__c/fields/Third_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Employer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Employer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CIHI (Third Employer Name)</relationshipLabel>
    <relationshipName>Third_Employer</relationshipName>
    <type>Lookup</type>
</CustomField>