force-app/main/default/objects/CIHI__c/fields/Third_Employment_Annual_Earned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Third_Employment_Annual_Earned_Hours__c</fullName>
    <label>Third Employment Annual Earned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>