force-app/main/default/objects/CIHI__c/fields/Third_Employment_Area_of_Practice_3__c.field-meta.xml
<CustomField>
    <fullName>Third_Employment_Area_of_Practice_3__c</fullName>
    <label>Third Employment Area of Practice 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employment_Area_of_Practice</valueSetName>
    </valueSet>
</CustomField>