force-app/main/default/objects/CIHI__c/fields/Third_Patient_Interaction_Type_Three__c.field-meta.xml
<CustomField>
    <fullName>Third_Patient_Interaction_Type_Three__c</fullName>
    <label>Third Employer Patient Interaction 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Employer_Patient_Interaction_Type_3</valueSetName>
    </valueSet>
</CustomField>