force-app/main/default/objects/CIHI__c/fields/Third_Place_of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Third_Place_of_Employment__c</fullName>
    <label>Third Place of Employment 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Place_of_Employment</valueSetName>
    </valueSet>
</CustomField>