force-app/main/default/objects/CIHI__c/fields/Third_Position_3__c.field-meta.xml
<CustomField>
    <fullName>Third_Position_3__c</fullName>
    <label>Third Position 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIHI_Position_Set</valueSetName>
    </valueSet>
</CustomField>