force-app/main/default/objects/CIHI__c/fields/Valid_from_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_from_Date__c</fullName>
    <label>Valid from Date</label>
    <type>Date</type>
</CustomField>