force-app/main/default/objects/CIHI__c/fields/Weekly_Practice_Hours_Primary_Employment__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Practice_Hours_Primary_Employment__c</fullName>
    <label>Weekly Practice Hours Primary Employment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>