force-app/main/default/objects/CIHI__c/fields/Weekly_Practice_Hrs_for_Third_Employment__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Practice_Hrs_for_Third_Employment__c</fullName>
    <label>Weekly Practice Hrs for Third Employment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>