force-app/main/default/objects/CIHI__c/fields/Year_of_Grad_Basic_Education_in_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Grad_Basic_Education_in_Pharmacy__c</fullName>
    <label>Basic Pharmacy Education Graduation Yr.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>