force-app/main/default/objects/CIHI__c/fields/Year_of_Grad_Highest_of_Post_Basic_Edu__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Grad_Highest_of_Post_Basic_Edu__c</fullName>
    <label>Highest Level of Pharmacy Education Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>