force-app/main/default/objects/CIHI__c/fields/Year_of_Initial_Registration__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Initial_Registration__c</fullName>
    <formula>TEXT(YEAR( Date_of_Initial_Registration__c ) )</formula>
    <label>Year of Initial Registration</label>
    <type>Text</type>
</CustomField>